update tools page

--- a/partials/tools.html
+++ b/partials/tools.html
@@ -1,8 +1,8 @@
 <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 text-center">
     <li>
         <div class="panel">
-            <h4>自动注册QQ号</h4>
-            <img class="th" src="http://foundation.zurb.com/docs/assets/img/examples/comet-th.jpg">
+            <h3>自动注册QQ号</h3>
+            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2DHNbaFXXXXaHXpXXXXXXXXXX_!!503407172.png">
             <p>
                 由于同一个Q号每天能加的Q群数量，群发的频繁度等等有一定的限制。
                 所以我们需要大量的QQ号来对付这些限制。
@@ -14,7 +14,7 @@
     <li>
         <div class="panel">
             <h3>自动加QQ群</h3>
-            <img class="th" src="http://foundation.zurb.com/docs/assets/img/examples/spacewalk-th.jpg">
+            <img class="th" src="http://img04.taobaocdn.com/imgextra/i4/503407172/TB2ktpaaFXXXXbjXpXXXXXXXXXX_!!503407172.png">
             <p>
                 支持关键词/Q群号搜索。
                 支持批量导入QQ号进行自动切换。
@@ -26,7 +26,7 @@
     <li>
         <div class="panel">
             <h3>自动Q群成员群发</h3>
-            <img class="th" src="http://foundation.zurb.com/docs/assets/img/examples/launch-th.jpg">
+            <img class="th" src="http://img01.taobaocdn.com/imgextra/i1/503407172/TB2csXcaFXXXXarXpXXXXXXXXXX_!!503407172.png">
             <p>
                 支持自定义发送内容。
                 支持批量导入QQ号进行自动切换。
@@ -38,7 +38,7 @@
     <li>
         <div class="panel">
             <h3>自动QQ好友群发</h3>
-            <img class="th" src="http://foundation.zurb.com/docs/assets/img/examples/space-th.jpg">
+            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2du39apXXXXcpXpXXXXXXXXXX_!!503407172.png">
             <p>
                 支持自定义发送内容。
                 支持批量导入QQ号进行自动切换。
@@ -50,8 +50,21 @@
 
     <li>
         <div class="panel">
+            <h3>自动Q群加好友</h3>
+            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2gz8faFXXXXbSXXXXXXXXXXXX_!!503407172.png">
+            <p>
+                支持自定义验证内容。
+                支持批量导入QQ号进行自动切换。
+                绿色安装，不占空间，使用方便。
+            </p>
+            <a href="#" class="button success">立即购买</a>
+        </div>
+    </li>
+
+    <li>
+        <div class="panel">
             <h3>自动Q群群发</h3>
-            <img class="th" src="http://foundation.zurb.com/docs/assets/img/examples/space-th.jpg">
+            <img class="th" src="http://img03.taobaocdn.com/imgextra/i3/503407172/TB25W8daFXXXXXTXpXXXXXXXXXX_!!503407172.png">
             <p>
                 支持自定义发送内容。
                 支持批量导入QQ号进行自动切换。
