update about and home

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,6 +1,6 @@
 <div class="row text-center" data-equalizer>
     <div class="small-6 medium-6 large-6 columns panel" data-equalizer-watch>
-        我们关注效率，相信质量与速度成正比
+        关注效率，相信质量与速度成正比
     </div>
     <div class="small-6 medium-6 large-6 columns panel" data-equalizer-watch>
         我们允许团队成员远程办公
