--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,7 @@
 <ul class="pricing-table">
     <li class="title">活动套餐优惠</li>
     <li class="price">200元</li>
-    <li class="description">庆国庆，10月7日前，购买整个套餐（5个工具包）只需要200元</li>
+    <li class="description">庆国庆，10月7日前，购买整个套餐（6个工具包）只需要250元</li>
     <li class="bullet-item">
         <a href="#/tools">自动注册QQ号</a>
     </li>
@@ -16,6 +16,9 @@
     </li>
     <li class="bullet-item">
         <a href="#/tools">自动Q群群发</a>
+    </li>
+    <li class="bullet-item">
+        <a href="#/tools">自动Q群加好友</a>
     </li>
     <li class="cta-button">
         <a class="button success" href="#">立即购买</a>
