--- a/partials/home.html
+++ b/partials/home.html
@@ -1,10 +1,7 @@
 <ul class="pricing-table">
     <li class="title">活动套餐优惠</li>
-    <li class="price">200元</li>
-    <li class="description">庆国庆，10月7日前，购买整个套餐（6个工具包）只需要250元</li>
-    <li class="bullet-item">
-        <a href="#/tools">自动注册QQ号</a>
-    </li>
+    <li class="price">3O0元</li>
+    <li class="description">庆国庆，10月7日前，购买整个套餐（5个工具包）有优惠！</li>
     <li class="bullet-item">
         <a href="#/tools">自动加QQ群</a>
     </li>
