--- a/partials/tools.html
+++ b/partials/tools.html
@@ -2,7 +2,7 @@
     <li>
         <div class="panel">
             <h3>自动注册QQ号</h3>
-            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2DHNbaFXXXXaHXpXXXXXXXXXX_!!503407172.png">
+            <img class="th" src="http://img01.taobaocdn.com/imgextra/i1/503407172/TB26WRtaFXXXXadXXXXXXXXXXXX_!!503407172.jpeg">
             <p>
                 由于同一个Q号每天能加的Q群数量，群发的频繁度等等有一定的限制。
                 所以我们需要大量的QQ号来对付这些限制。
@@ -14,63 +14,63 @@
     <li>
         <div class="panel">
             <h3>自动加QQ群</h3>
-            <img class="th" src="http://img04.taobaocdn.com/imgextra/i4/503407172/TB2ktpaaFXXXXbjXpXXXXXXXXXX_!!503407172.png">
+            <img class="th" src="http://img01.taobaocdn.com/imgextra/i1/503407172/TB2JkhiaFXXXXboXpXXXXXXXXXX_!!503407172.jpeg">
             <p>
                 支持关键词/Q群号搜索。
                 支持批量导入QQ号进行自动切换。
                 绿色安装，不占空间，使用方便。
             </p>
-            <a href="#" class="button success">立即购买</a>
+            <a target="_blank" href="http://item.taobao.com/item.htm?spm=686.1000925.1000774.40.k4Yl7P&id=41351999165" class="button success">立即购买</a>
         </div>
     </li>
     <li>
         <div class="panel">
             <h3>自动Q群成员群发</h3>
-            <img class="th" src="http://img01.taobaocdn.com/imgextra/i1/503407172/TB2csXcaFXXXXarXpXXXXXXXXXX_!!503407172.png">
+            <img class="th" src="http://img01.taobaocdn.com/imgextra/i1/503407172/TB2xzVraFXXXXa4XXXXXXXXXXXX_!!503407172.jpeg">
             <p>
                 支持自定义发送内容。
                 支持批量导入QQ号进行自动切换。
                 绿色安装，不占空间，使用方便。
             </p>
-            <a href="#" class="button success">立即购买</a>
+            <a target="_blank" href="http://item.taobao.com/item.htm?spm=686.1000925.1000774.22.k4Yl7P&id=41408636173" class="button success">立即购买</a>
         </div>
     </li>
     <li>
         <div class="panel">
             <h3>自动QQ好友群发</h3>
-            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2du39apXXXXcpXpXXXXXXXXXX_!!503407172.png">
+            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2yThjaFXXXXaJXpXXXXXXXXXX_!!503407172.jpeg">
             <p>
                 支持自定义发送内容。
                 支持批量导入QQ号进行自动切换。
                 绿色安装，不占空间，使用方便。
             </p>
-            <a href="#" class="button success">立即购买</a>
+            <a target="_blank" href="http://item.taobao.com/item.htm?spm=686.1000925.1000774.16.k4Yl7P&id=41408412737" class="button success">立即购买</a>
         </div>
     </li>
 
     <li>
         <div class="panel">
             <h3>自动Q群加好友</h3>
-            <img class="th" src="http://img02.taobaocdn.com/imgextra/i2/503407172/TB2gz8faFXXXXbSXXXXXXXXXXXX_!!503407172.png">
+            <img class="th" src="http://img03.taobaocdn.com/imgextra/i3/503407172/TB2qyhqaFXXXXcZXXXXXXXXXXXX_!!503407172.jpeg">
             <p>
                 支持自定义验证内容。
                 支持批量导入QQ号进行自动切换。
                 绿色安装，不占空间，使用方便。
             </p>
-            <a href="#" class="button success">立即购买</a>
+            <a target="_blank" href="http://item.taobao.com/item.htm?spm=686.1000925.1000774.34.k4Yl7P&id=41394549303" class="button success">立即购买</a>
         </div>
     </li>
 
     <li>
         <div class="panel">
             <h3>自动Q群群发</h3>
-            <img class="th" src="http://img03.taobaocdn.com/imgextra/i3/503407172/TB25W8daFXXXXXTXpXXXXXXXXXX_!!503407172.png">
+            <img class="th" src="http://img03.taobaocdn.com/imgextra/i3/503407172/TB2tglmaFXXXXaKXpXXXXXXXXXX_!!503407172.jpeg">
             <p>
                 支持自定义发送内容。
                 支持批量导入QQ号进行自动切换。
                 绿色安装，不占空间，使用方便。
             </p>
-            <a href="#" class="button success">立即购买</a>
+            <a target="_blank" href="http://item.taobao.com/item.htm?spm=686.1000925.1000774.28.k4Yl7P&id=41368062451" class="button success">立即购买</a>
         </div>
     </li>
 </ul>
