--- a/partials/home.html
+++ b/partials/home.html
@@ -1,23 +1,16 @@
 <ul class="pricing-table">
-    <li class="title">活动套餐优惠</li>
-    <li class="price">3O0元</li>
-    <li class="description">庆国庆，10月7日前，购买整个套餐（5个工具包）有优惠！</li>
+    <li class="title">量身订制</li>
+    <li class="description">根据你的需要，为你量身订制属于你的工具。</li>
     <li class="bullet-item">
-        <a href="#/tools">自动加QQ群</a>
+        <a href="#/tools">QQ系列</a>
     </li>
     <li class="bullet-item">
-        <a href="#/tools">自动Q群成员群发</a>
+        <a href="#/tools">YY系列</a>
     </li>
     <li class="bullet-item">
-        <a href="#/tools">自动QQ好友群发</a>
-    </li>
-    <li class="bullet-item">
-        <a href="#/tools">自动Q群群发</a>
-    </li>
-    <li class="bullet-item">
-        <a href="#/tools">自动Q群加好友</a>
+        <a href="#/tools">微信系列</a>
     </li>
     <li class="cta-button">
-        <a class="button success" href="#">立即购买</a>
+        <a class="button success" href="#">立即订制</a>
     </li>
 </ul>
